Launch Snowstorm + rdf-builder bridge in live report test; assert non-empty SNOMED terminology
Co-authored-by: danibanezRepos <129841581+danibanezRepos@users.noreply.github.com>