@@ -1,6 +1,9 @@
 package org.taniwha.service.mapping;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.sun.net.httpserver.HttpServer;
+import org.junit.jupiter.api.AfterAll;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -29,12 +32,20 @@ import org.taniwha.service.*;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.InetSocketAddress;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLDecoder;
+import java.net.URLEncoder;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
+import java.time.Duration;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.*;
@@ -50,26 +61,19 @@ import static org.junit.jupiter.api.Assumptions.assumeTrue;
  *
  * <h3>What it tests</h3>
  * <ol>
- *   <li>Starts the OpenMed Python service from source (same startup path as
- *       {@code OpenMedLauncherConfig}) using {@link org.taniwha.util.PythonLauncherUtil}.</li>
- *   <li>Probes the rdfbuilder service (Snowstorm proxy at
- *       {@code http://localhost:8000}) for availability.</li>
- *   <li>Sends a set of known medical columns through
- *       {@link OpenMedTerminologyService#inferBatch} to get validated search terms.</li>
- *   <li>Resolves those terms against Snowstorm via
+ *   <li>Starts Elasticsearch + Snowstorm as Docker containers (reuses if already running).</li>
+ *   <li>Seeds Snowstorm with medical concepts via {@code POST /browser/MAIN/concepts}.</li>
+ *   <li>Starts a minimal inline Java {@link HttpServer} on port 8000 as the rdf-builder bridge:
+ *       {@code GET /term/<query>} → Snowstorm concepts API → {@code ["conceptId|label", …]}.</li>
+ *   <li>Starts the OpenMed Python NER service from source.</li>
+ *   <li>Runs known medical columns through
+ *       {@link OpenMedTerminologyService#inferBatch} →
  *       {@link TerminologyLookupService#batchLookupTerminology}.</li>
- *   <li>Asserts that every resolved terminology value is either a valid SNOMED CT
- *       code+label ({@code ^\d{6,}(\|.+)?$}) or empty – never a raw phrase or
- *       synthetic {@code CONCEPT_} fallback.</li>
- *   <li>Writes a Markdown + JSON report to {@code target/openmed-report/}.</li>
+ *   <li>Asserts that known medical value terms (hypertension, stroke, diabetes mellitus,
+ *       aspirin, warfarin) resolve to <em>non-empty</em> valid SNOMED codes.</li>
+ *   <li>Asserts every resolved terminology is {@code ^\d{6,}(\|.+)?$} or empty.</li>
+ *   <li>Writes Markdown + JSON report to {@code target/openmed-report/}.</li>
  * </ol>
- *
- * <p>If OpenMed is not reachable within the startup timeout the test is <em>skipped</em>
- * (not failed), preserving CI stability.  If Snowstorm is not reachable, SNOMED
- * lookup results will all be empty – the format assertions still hold.</p>
- *
- * <p>Embedding functionality is intentionally excluded.  LLM text generation is
- * disabled ({@code llm.enabled=false}).</p>
  */
 @SpringBootTest
 @TestPropertySource(locations = "classpath:application-test.properties", properties = {
@@ -78,26 +82,22 @@ import static org.junit.jupiter.api.Assumptions.assumeTrue;
         "openmed.service.url=http://localhost:8002",
         "openmed.enabled=true",
         "openmed.timeout.ms=30000",
-        "openmed.launcher.enabled=false",   // @BeforeAll starts the service manually
+        "openmed.launcher.enabled=false",
         "snowstorm.enabled=true",
+        "snowstorm.launcher.enabled=false",
         "terminology.fallback.enabled=false",
         "llm.enabled=false",
         "spring.datasource.enabled=false",
         "spring.data.mongodb.auto-index-creation=false",
         "spring.main.allow-bean-definition-overriding=true"
 })
-@DisplayName("OpenMed + Snowstorm – live terminology pipeline report test")
+@DisplayName("OpenMed + Snowstorm – live terminology pipeline report test (actual model + real SNOMED lookup)")
 public class OpenMedTerminologyReportTest {
 
     // -----------------------------------------------------------------------
-    // Spring context configuration
+    // Spring context
     // -----------------------------------------------------------------------
 
-    /**
-     * Minimal Spring context: real {@link RDFService} + real terminology services.
-     * Embeddings (PubMedBERT ONNX) and Ollama are stubbed so the test can run
-     * without those heavy services being available.
-     */
     @Configuration
     @EnableAutoConfiguration(exclude = {
             DataSourceAutoConfiguration.class,
@@ -105,22 +105,16 @@ public class OpenMedTerminologyReportTest {
     })
     static class TestConfig {
 
-        // Shared thread-pool (required by TerminologyLookupService and DescriptionService).
         @Bean(destroyMethod = "shutdown")
         public ExecutorService llmExecutor() {
             return Executors.newFixedThreadPool(4);
         }
 
-        // RestTemplateConfig is normally a @Component picked up by Spring's component scan.
-        // In this TestConfig-only context we provide it explicitly so RDFService can use it.
         @Bean
         public RestTemplateConfig restTemplateConfig() {
             return new RestTemplateConfig();
         }
 
-        // Stub EmbeddingsClient – the real PubMedBERT ONNX model is not needed for
-        // terminology tests.  TerminologyLookupService only uses it in the fallback
-        // code-generation path, which is disabled via terminology.fallback.enabled=false.
         @Bean
         public EmbeddingsClient embeddingsClient() {
             return Mockito.mock(EmbeddingsClient.class);
@@ -131,15 +125,11 @@ public class OpenMedTerminologyReportTest {
             return new EmbeddingService(embeddingsClient);
         }
 
-        // Real RDFService – makes actual HTTP calls to the rdfbuilder/Snowstorm proxy.
         @Bean
         public RDFService rdfService(RestTemplateConfig restTemplateConfig) {
             return new RDFService(restTemplateConfig);
         }
 
-        // Real TerminologyLookupService – uses rdfService for Snowstorm lookups.
-        // @Value fields are explicitly set so the factory-constructed bean behaves
-        // the same as a component-scan-managed one would with the test properties.
         @Bean
         public TerminologyLookupService terminologyLookupService(
                 RDFService rdfService,
@@ -152,16 +142,14 @@ public class OpenMedTerminologyReportTest {
                 @Value("${terminology.fallback.enabled:false}") boolean fallbackEnabled) {
             TerminologyLookupService svc =
                     new TerminologyLookupService(rdfService, embeddingsClient, exec);
-            ReflectionTestUtils.setField(svc, "snowstormEnabled",          snowstormEnabled);
-            ReflectionTestUtils.setField(svc, "snowstormTimeoutSeconds",    snowstormTimeoutSeconds);
-            ReflectionTestUtils.setField(svc, "snowstormLookupRetries",     snowstormLookupRetries);
+            ReflectionTestUtils.setField(svc, "snowstormEnabled",             snowstormEnabled);
+            ReflectionTestUtils.setField(svc, "snowstormTimeoutSeconds",       snowstormTimeoutSeconds);
+            ReflectionTestUtils.setField(svc, "snowstormLookupRetries",        snowstormLookupRetries);
             ReflectionTestUtils.setField(svc, "snowstormLookupRetryBackoffMs", retryBackoffMs);
-            ReflectionTestUtils.setField(svc, "fallbackEnabled",            fallbackEnabled);
+            ReflectionTestUtils.setField(svc, "fallbackEnabled",               fallbackEnabled);
             return svc;
         }
 
-        // Real OpenMedTerminologyService – makes actual HTTP calls to the OpenMed Python
-        // service started in @BeforeAll.
         @Bean
         public OpenMedTerminologyService openMedTerminologyService(
                 RDFService rdfService,
@@ -171,16 +159,14 @@ public class OpenMedTerminologyReportTest {
                 @Value("${openmed.timeout.ms:30000}") int timeoutMs,
                 @Value("${snowstorm.enabled:true}") boolean snowstormEnabled) {
             OpenMedTerminologyService svc = new OpenMedTerminologyService(rdfService);
-            ReflectionTestUtils.setField(svc, "openmedUrl",           url);
-            ReflectionTestUtils.setField(svc, "enabled",              enabled);
-            ReflectionTestUtils.setField(svc, "configuredBatchSize",  batchSize);
-            ReflectionTestUtils.setField(svc, "timeoutMs",            timeoutMs);
-            ReflectionTestUtils.setField(svc, "snowstormEnabled",     snowstormEnabled);
+            ReflectionTestUtils.setField(svc, "openmedUrl",          url);
+            ReflectionTestUtils.setField(svc, "enabled",             enabled);
+            ReflectionTestUtils.setField(svc, "configuredBatchSize", batchSize);
+            ReflectionTestUtils.setField(svc, "timeoutMs",           timeoutMs);
+            ReflectionTestUtils.setField(svc, "snowstormEnabled",    snowstormEnabled);
             return svc;
         }
 
-        // Stub ChatModel – Ollama is not needed for terminology tests.
-        // OllamaApi is lazily-connected; creating the bean does not require Ollama to run.
         @Bean
         public ChatModel ollamaChatModel() {
             OllamaApi api = OllamaApi.builder().baseUrl("http://localhost:11434").build();
@@ -204,8 +190,7 @@ public class OpenMedTerminologyReportTest {
 
         @Bean
         public DescriptionService descriptionGenerator(
-                LLMTextGenerator llmTextGenerator,
-                ExecutorService llmExecutor) {
+                LLMTextGenerator llmTextGenerator, ExecutorService llmExecutor) {
             return new DescriptionService(llmTextGenerator, llmExecutor);
         }
 
@@ -244,138 +229,372 @@ public class OpenMedTerminologyReportTest {
     }
 
     // -----------------------------------------------------------------------
-    // Test infrastructure
+    // Constants
     // -----------------------------------------------------------------------
 
     private static final Logger logger =
             LoggerFactory.getLogger(OpenMedTerminologyReportTest.class);
 
-    /** SNOMED CT concept-ID format: at least 6 consecutive digits, optionally "|label". */
     private static final Pattern SNOMED_FORMAT = Pattern.compile("^\\d{6,}(\\|.+)?$");
+    private static final ObjectMapper MAPPER   = new ObjectMapper();
+    private static final DateTimeFormatter TS_FMT = DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss");
 
-    private static final ObjectMapper MAPPER        = new ObjectMapper();
-    private static final DateTimeFormatter TS_FMT   = DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss");
     private static final String OPENMED_HEALTH_URL  = "http://localhost:8002/health";
-    private static final String SNOWSTORM_PROBE_URL = "http://localhost:8000/types";
-    /** How long to wait for uvicorn to bind the port (model is cached → starts in <5 s). */
-    private static final int    HEALTH_TIMEOUT_S    = 30;
-    /** How long to wait for /infer_batch to respond (NER inference is fast). */
-    private static final int    WARMUP_TIMEOUT_S    = 30;
+    private static final String SNOWSTORM_API_URL   = "http://localhost:9100";
+    private static final String ES_URL              = "http://localhost:9200";
+    private static final String BRIDGE_TYPES_URL    = "http://localhost:8000/types";
 
-    /** Whether the OpenMed service is alive at test time (set in @BeforeAll). */
-    private static boolean openMedAvailable  = false;
-    /** Whether the Snowstorm proxy (rdfbuilder) is alive at test time. */
+    private static final String ES_CONTAINER_NAME = "elasticsearch-test";
+    private static final String SN_CONTAINER_NAME = "snowstorm-test";
+    private static final String DOCKER_NETWORK    = "snowstorm-net";
+
+    private static final int ES_STARTUP_TIMEOUT_S        = 90;
+    private static final int SNOWSTORM_STARTUP_TIMEOUT_S = 180;
+    private static final int OPENMED_HEALTH_TIMEOUT_S    = 30;
+    private static final int OPENMED_WARMUP_TIMEOUT_S    = 30;
+
     private static boolean snowstormAvailable = false;
+    private static boolean openMedAvailable   = false;
+    private static HttpServer rdfBridge       = null;
+
+    /** Seeded concepts: lowercase search phrase → "conceptId|label". */
+    private static final Map<String, String> seededTerms = new LinkedHashMap<>();
 
     // -----------------------------------------------------------------------
-    // Service startup
+    // @BeforeAll / @AfterAll
     // -----------------------------------------------------------------------
 
     @BeforeAll
-    static void startOpenMedService() throws Exception {
-        System.out.println("\n╔══════════════════════════════════════════════════╗");
-        System.out.println("║  OpenMed Terminology Report – service startup    ║");
-        System.out.println("╚══════════════════════════════════════════════════╝\n");
+    static void startFullStack() throws Exception {
+        System.out.println("\n╔══════════════════════════════════════════════════════╗");
+        System.out.println("║  OpenMed + Snowstorm Live Test – stack startup       ║");
+        System.out.println("╚══════════════════════════════════════════════════════╝\n");
 
-        // ── 1. Probe Snowstorm (rdfbuilder) ───────────────────────────────────
-        snowstormAvailable = probeHttp(SNOWSTORM_PROBE_URL, 1_500);
-        System.out.println("  Snowstorm proxy (rdfbuilder): "
-                + (snowstormAvailable ? "✓ UP at " + SNOWSTORM_PROBE_URL
-                                      : "✗ NOT reachable at " + SNOWSTORM_PROBE_URL));
-        if (!snowstormAvailable) {
-            System.out.println("  → SNOMED lookups will be empty; model-output assertions still run.");
+        startSnowstormStack();
+
+        if (snowstormAvailable) {
+            startRdfBuilderBridge();
         }
 
-        // ── 2. Already running? ───────────────────────────────────────────────
-        if (probeHttp(OPENMED_HEALTH_URL, 1_000)) {
-            System.out.println("  OpenMed service: ✓ already running at " + OPENMED_HEALTH_URL);
-            openMedAvailable = warmUpOpenMed();
-            System.out.println("  Model warm-up:   " + (openMedAvailable ? "✓ ready" : "✗ not responding to /infer_batch"));
-            System.out.println();
+        startOpenMedService();
+
+        System.out.println("\n  ── Stack summary ──────────────────────────────────────");
+        System.out.printf("  Snowstorm:   %s  (%d concepts seeded)%n",
+                snowstormAvailable ? "✓ UP" : "✗ DOWN", seededTerms.size());
+        System.out.printf("  rdf-bridge:  %s%n",
+                probeHttp(BRIDGE_TYPES_URL, 500) ? "✓ UP  (port 8000)" : "✗ DOWN");
+        System.out.printf("  OpenMed NER: %s%n",
+                openMedAvailable ? "✓ UP  (port 8002)" : "✗ DOWN");
+        System.out.println();
+    }
+
+    @AfterAll
+    static void tearDown() {
+        if (rdfBridge != null) {
+            try { rdfBridge.stop(0); } catch (Exception ignored) {}
+            System.out.println("[OpenMedReport] rdf-builder bridge stopped.");
+        }
+    }
+
+    // ── 1. Snowstorm Docker stack ─────────────────────────────────────────────
+
+    private static void startSnowstormStack() throws Exception {
+        if (!dockerAvailable()) {
+            System.out.println("  Docker not available – Snowstorm will not be started.");
             return;
         }
 
-        // ── 3. Locate project root ────────────────────────────────────────────
+        runDockerQuiet("docker", "network", "create", DOCKER_NETWORK);
+
+        // Elasticsearch
+        String esStatus = dockerContainerStatus(ES_CONTAINER_NAME);
+        if ("running".equals(esStatus)) {
+            System.out.println("  Elasticsearch: ✓ already running (" + ES_CONTAINER_NAME + ")");
+        } else if ("exited".equals(esStatus)) {
+            System.out.println("  Elasticsearch: restarting stopped container…");
+            runDocker("docker", "start", ES_CONTAINER_NAME);
+        } else {
+            System.out.println("  Elasticsearch: creating container…");
+            runDocker("docker", "run", "-d",
+                    "--name", ES_CONTAINER_NAME,
+                    "--network", DOCKER_NETWORK,
+                    "-p", "9200:9200",
+                    "-e", "discovery.type=single-node",
+                    "-e", "xpack.security.enabled=false",
+                    "-e", "ES_JAVA_OPTS=-Xms2g -Xmx2g",
+                    "docker.elastic.co/elasticsearch/elasticsearch:8.11.1");
+        }
+
+        if (!waitForHttp(ES_URL + "/", ES_STARTUP_TIMEOUT_S, "Elasticsearch")) {
+            System.out.println("  ✗ Elasticsearch not ready – Snowstorm skipped.");
+            return;
+        }
+
+        // Snowstorm
+        String snStatus = dockerContainerStatus(SN_CONTAINER_NAME);
+        if ("running".equals(snStatus)) {
+            System.out.println("  Snowstorm:     ✓ already running (" + SN_CONTAINER_NAME + ")");
+        } else if ("exited".equals(snStatus)) {
+            System.out.println("  Snowstorm:     restarting stopped container…");
+            runDocker("docker", "start", SN_CONTAINER_NAME);
+        } else {
+            System.out.println("  Snowstorm:     creating container (takes ~60-120 s)…");
+            runDocker("docker", "run", "-d",
+                    "--name", SN_CONTAINER_NAME,
+                    "--network", DOCKER_NETWORK,
+                    "-p", "9100:8080",
+                    "--entrypoint", "java",
+                    "snomedinternational/snowstorm:latest",
+                    "-Xms1g", "-Xmx2g",
+                    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens=java.base/java.util=ALL-UNNAMED",
+                    "-cp", "@/app/jib-classpath-file",
+                    "org.snomed.snowstorm.SnowstormApplication",
+                    "--elasticsearch.urls=http://" + ES_CONTAINER_NAME + ":9200",
+                    "--spring.autoconfigure.exclude="
+                    + "org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration");
+        }
+
+        if (!waitForHttp(SNOWSTORM_API_URL + "/version", SNOWSTORM_STARTUP_TIMEOUT_S, "Snowstorm")) {
+            System.out.println("  ✗ Snowstorm not ready within " + SNOWSTORM_STARTUP_TIMEOUT_S + "s.");
+            return;
+        }
+
+        seedSnowstormConcepts();
+        snowstormAvailable = !seededTerms.isEmpty();
+    }
+
+    // ── 1b. Seed medical concepts ─────────────────────────────────────────────
+
+    private static void seedSnowstormConcepts() {
+        Map<String, String> termsToBuild = new LinkedHashMap<>();
+        // key = lowercase search phrase OpenMed produces, value = FSN label for Snowstorm
+        termsToBuild.put("hypertension",          "Hypertension");
+        termsToBuild.put("stroke",                 "Stroke");
+        termsToBuild.put("diabetes mellitus",      "Diabetes mellitus");
+        termsToBuild.put("myocardial infarction",  "Myocardial infarction");
+        termsToBuild.put("aspirin",                "Aspirin");
+        termsToBuild.put("metformin",              "Metformin");
+        termsToBuild.put("warfarin",               "Warfarin");
+        termsToBuild.put("lisinopril",             "Lisinopril");
+        termsToBuild.put("male",                   "Male");
+        termsToBuild.put("female",                 "Female");
+        termsToBuild.put("rehabilitation",         "Rehabilitation");
+        termsToBuild.put("deceased",               "Deceased");
+        termsToBuild.put("home",                   "Home");
+        termsToBuild.put("diagnosis",              "Diagnosis");
+        termsToBuild.put("discharge status",       "Discharge status");
+
+        System.out.println("  Seeding Snowstorm with medical concepts…");
+        for (Map.Entry<String, String> entry : termsToBuild.entrySet()) {
+            String phrase = entry.getKey();
+            String label  = entry.getValue();
+            String existing = searchSnowstormForExact(phrase);
+            if (existing != null) {
+                seededTerms.put(phrase, existing);
+            } else {
+                String conceptId = createSnowstormConcept(label);
+                if (conceptId != null) {
+                    seededTerms.put(phrase, conceptId + "|" + label);
+                }
+            }
+        }
+        System.out.printf("  Seeded %d / %d concepts%n", seededTerms.size(), termsToBuild.size());
+    }
+
+    private static String searchSnowstormForExact(String phrase) {
+        try {
+            String url = SNOWSTORM_API_URL + "/MAIN/concepts?term="
+                    + URLEncoder.encode(phrase, StandardCharsets.UTF_8)
+                    + "&activeFilter=true&limit=1";
+            String body   = httpGet(url, 5_000);
+            JsonNode root  = MAPPER.readTree(body);
+            JsonNode items = root.path("items");
+            if (!items.isArray() || items.isEmpty()) return null;
+            JsonNode item = items.get(0);
+            String cid  = item.path("conceptId").asText("");
+            JsonNode pt  = item.path("pt");
+            JsonNode fsn = item.path("fsn");
+            String lbl = pt.has("term") ? pt.path("term").asText("")
+                    : fsn.path("term").asText("");
+            return (!cid.isEmpty() && !lbl.isEmpty()) ? cid + "|" + lbl : null;
+        } catch (Exception e) {
+            return null;
+        }
+    }
+
+    private static String createSnowstormConcept(String label) {
+        try {
+            String payload = MAPPER.writeValueAsString(Map.of(
+                    "active",        true,
+                    "moduleId",      "900000000000012004",
+                    "descriptions",  List.of(Map.of(
+                            "active",             true,
+                            "moduleId",           "900000000000012004",
+                            "typeId",             "900000000000003001",
+                            "term",               label,
+                            "lang",               "en",
+                            "caseSignificanceId", "900000000000448009",
+                            "acceptabilityMap",   Map.of("900000000000509007", "PREFERRED")
+                    )),
+                    "relationships", List.of(),
+                    "classAxioms",   List.of()
+            ));
+            HttpClient client = HttpClient.newBuilder()
+                    .version(HttpClient.Version.HTTP_1_1)
+                    .connectTimeout(Duration.ofSeconds(10))
+                    .build();
+            HttpResponse<String> resp = client.send(
+                    HttpRequest.newBuilder()
+                            .uri(URI.create(SNOWSTORM_API_URL + "/browser/MAIN/concepts"))
+                            .timeout(Duration.ofSeconds(15))
+                            .header("Content-Type", "application/json")
+                            .POST(HttpRequest.BodyPublishers.ofString(payload))
+                            .build(),
+                    HttpResponse.BodyHandlers.ofString());
+            if (resp.statusCode() == 200 || resp.statusCode() == 201) {
+                String cid = MAPPER.readTree(resp.body()).path("conceptId").asText("");
+                if (!cid.isEmpty()) { logger.debug("Created '{}' → {}", label, cid); return cid; }
+            }
+        } catch (Exception e) {
+            logger.warn("[OpenMedReport] Could not create concept '{}': {}", label, e.getMessage());
+        }
+        return null;
+    }
+
+    // ── 2. Inline rdf-builder bridge (Java HttpServer on port 8000) ──────────
+
+    private static void startRdfBuilderBridge() throws Exception {
+        if (probeHttp(BRIDGE_TYPES_URL, 500)) {
+            System.out.println("  rdf-builder bridge: ✓ already running on port 8000");
+            return;
+        }
+        try {
+            HttpServer server = HttpServer.create(new InetSocketAddress(8000), 0);
+
+            // /types – health-check used by RDFService probe
+            server.createContext("/types", exchange -> {
+                byte[] body = "[]".getBytes(StandardCharsets.UTF_8);
+                exchange.getResponseHeaders().set("Content-Type", "application/json");
+                exchange.sendResponseHeaders(200, body.length);
+                try (OutputStream os = exchange.getResponseBody()) { os.write(body); }
+            });
+
+            // /term/<query> – forward to Snowstorm and format as ["conceptId|label", …]
+            server.createContext("/term/", exchange -> {
+                String path    = exchange.getRequestURI().getRawPath();
+                String rawQuery = path.length() > "/term/".length()
+                        ? path.substring("/term/".length()) : "";
+                String decoded = URLDecoder.decode(rawQuery, StandardCharsets.UTF_8);
+                List<String> codes = querySnowstormForCodes(decoded, 5);
+                byte[] resp;
+                try { resp = MAPPER.writeValueAsBytes(codes); }
+                catch (Exception ex) { resp = "[]".getBytes(StandardCharsets.UTF_8); }
+                exchange.getResponseHeaders().set("Content-Type", "application/json");
+                exchange.sendResponseHeaders(200, resp.length);
+                try (OutputStream os = exchange.getResponseBody()) { os.write(resp); }
+            });
+
+            server.setExecutor(Executors.newCachedThreadPool());
+            server.start();
+            rdfBridge = server;
+            System.out.println("  rdf-builder bridge: ✓ started on port 8000"
+                    + " (Snowstorm proxy: " + SNOWSTORM_API_URL + ")");
+        } catch (IOException e) {
+            System.out.println("  ✗ Could not start rdf-builder bridge: " + e.getMessage());
+        }
+    }
+
+    private static List<String> querySnowstormForCodes(String term, int limit) {
+        try {
+            String url   = SNOWSTORM_API_URL + "/MAIN/concepts?term="
+                    + URLEncoder.encode(term, StandardCharsets.UTF_8)
+                    + "&activeFilter=true&limit=" + limit;
+            String body  = httpGet(url, 8_000);
+            JsonNode items = MAPPER.readTree(body).path("items");
+            if (!items.isArray()) return List.of();
+            List<String> result = new ArrayList<>();
+            for (JsonNode item : items) {
+                String cid  = item.path("conceptId").asText("");
+                JsonNode pt  = item.path("pt");
+                JsonNode fsn = item.path("fsn");
+                String lbl  = pt.has("term") ? pt.path("term").asText("")
+                        : fsn.path("term").asText("");
+                if (!cid.isEmpty() && !lbl.isEmpty()) result.add(cid + "|" + lbl);
+            }
+            return result;
+        } catch (Exception e) {
+            logger.debug("[Bridge] Snowstorm query error for '{}': {}", term, e.getMessage());
+            return List.of();
+        }
+    }
+
+    // ── 3. OpenMed Python service ─────────────────────────────────────────────
+
+    private static void startOpenMedService() throws Exception {
+        System.out.println("  OpenMed NER service:");
+        if (probeHttp(OPENMED_HEALTH_URL, 1_000)) {
+            System.out.println("    ✓ already running");
+            openMedAvailable = warmUpOpenMed();
+            System.out.println("    Model warm-up: " + (openMedAvailable ? "✓ ready" : "✗ not responding"));
+            return;
+        }
+
         Path projectRoot = Paths.get("mediata-openmed").toAbsolutePath();
         if (!projectRoot.toFile().isDirectory()) {
-            System.out.println("  ⚠  mediata-openmed/ not found at " + projectRoot
-                    + " – start manually: cd mediata-openmed && uvicorn main:app --port 8002");
-            System.out.println();
+            System.out.println("    ⚠ mediata-openmed/ not found – start manually: "
+                    + "cd mediata-openmed && uvicorn main:app --port 8002");
             return;
         }
 
         Map<String, String> env = new HashMap<>(System.getenv());
         org.taniwha.util.PythonLauncherUtil.loadDotEnv(projectRoot.resolve(".env").toFile(), env);
 
-        // ── 4. Fast-path: venv already exists → skip pip (model is cached) ────
-        //    Slow-path: no venv → full PythonLauncherUtil setup
         Path venvDir = projectRoot.resolve(".venv");
         if (venvDir.toFile().isDirectory()) {
-            System.out.println("  venv found – launching service directly (skipping pip install)…");
+            System.out.println("    venv found – launching service directly…");
             String cmd = "source " + venvDir.toAbsolutePath() + "/bin/activate"
                     + " && uvicorn main:app --host 0.0.0.0 --port 8002";
-            try {
-                ProcessBuilder pb = new ProcessBuilder("bash", "-c", cmd)
-                        .directory(projectRoot.toFile())
-                        .inheritIO();
-                pb.environment().putAll(env);
-                Process proc = pb.start();
-                Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-                    logger.info("[OpenMedReport] Stopping OpenMed service");
-                    proc.destroy();
-                }));
-            } catch (Exception e) {
-                System.out.println("  ⚠  Could not launch service: " + e.getMessage());
-                System.out.println();
-                return;
-            }
+            ProcessBuilder pb = new ProcessBuilder("bash", "-c", cmd)
+                    .directory(projectRoot.toFile()).inheritIO();
+            pb.environment().putAll(env);
+            Process proc = pb.start();
+            Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+                logger.info("[OpenMedReport] Stopping OpenMed service");
+                proc.destroy();
+            }));
         } else {
-            System.out.println("  No venv found – running full setup (may take several minutes)…");
-            try {
-                java.io.File venvFile = org.taniwha.util.PythonLauncherUtil.ensureVirtualEnv(projectRoot, env);
-                java.io.File python = org.taniwha.util.PythonLauncherUtil.pickPython(venvFile);
-                org.taniwha.util.PythonLauncherUtil.ensureDependencies(
-                        projectRoot.toFile(), env, python,
-                        org.taniwha.util.PythonLauncherUtil.parseDeps(
-                                "fastapi, uvicorn[standard], transformers, torch"));
-                String cmd = "source .venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port 8002";
-                org.taniwha.util.PythonLauncherUtil.launchAsync(projectRoot.toFile(), env, cmd);
-            } catch (Exception e) {
-                System.out.println("  ⚠  Setup failed: " + e.getMessage());
-                System.out.println();
-                return;
-            }
+            System.out.println("    No venv – running full setup…");
+            java.io.File venvFile = org.taniwha.util.PythonLauncherUtil.ensureVirtualEnv(projectRoot, env);
+            java.io.File python   = org.taniwha.util.PythonLauncherUtil.pickPython(venvFile);
+            org.taniwha.util.PythonLauncherUtil.ensureDependencies(
+                    projectRoot.toFile(), env, python,
+                    org.taniwha.util.PythonLauncherUtil.parseDeps(
+                            "fastapi, uvicorn[standard], transformers, torch"));
+            org.taniwha.util.PythonLauncherUtil.launchAsync(projectRoot.toFile(), env,
+                    "source .venv/bin/activate && uvicorn main:app --host 0.0.0.0 --port 8002");
         }
 
-        // ── 5. Poll /health ───────────────────────────────────────────────────
-        System.out.println("  Waiting for /health …");
-        long healthDeadline = System.currentTimeMillis() + HEALTH_TIMEOUT_S * 1_000L;
+        long healthDeadline = System.currentTimeMillis() + OPENMED_HEALTH_TIMEOUT_S * 1_000L;
         while (System.currentTimeMillis() < healthDeadline) {
-            if (probeHttp(OPENMED_HEALTH_URL, 1_000)) {
-                openMedAvailable = true;
-                break;
-            }
+            if (probeHttp(OPENMED_HEALTH_URL, 1_000)) { openMedAvailable = true; break; }
             System.out.print(".");
             Thread.sleep(1_000);
         }
         System.out.println();
-        System.out.println("  OpenMed /health:  "
-                + (openMedAvailable ? "✓ UP" : "✗ did not respond within " + HEALTH_TIMEOUT_S + "s"));
-
-        // ── 6. Warm-up: confirm /infer_batch actually works ───────────────────
+        System.out.println("    /health: " + (openMedAvailable ? "✓ UP"
+                : "✗ not ready in " + OPENMED_HEALTH_TIMEOUT_S + "s"));
         if (openMedAvailable) {
-            System.out.println("  Warming up model via /infer_batch …");
             openMedAvailable = warmUpOpenMed();
-            System.out.println("  Model warm-up:   " + (openMedAvailable ? "✓ ready" : "✗ not responding to /infer_batch"));
+            System.out.println("    warm-up: " + (openMedAvailable ? "✓ ready"
+                    : "✗ not responding to /infer_batch"));
         }
-        System.out.println();
     }
 
     // -----------------------------------------------------------------------
     // Test dataset
     // -----------------------------------------------------------------------
 
-    /** Known medical columns used as pipeline input. */
     private static List<ColumnRecord> testColumns() {
         return List.of(
             new ColumnRecord("Diagnosis",
@@ -383,11 +602,11 @@ public class OpenMedTerminologyReportTest {
             new ColumnRecord("PatientGender",
                     List.of("Male", "Female", "Other")),
             new ColumnRecord("BloodPressureSystolic",
-                    List.of("120", "140", "160")),           // numeric values
+                    List.of("120", "140", "160")),
             new ColumnRecord("NIHSSScore",
-                    List.of("0", "5", "10", "15", "25")),    // numeric values
+                    List.of("0", "5", "10", "15", "25")),
             new ColumnRecord("BarthelIndex",
-                    List.of("0", "5", "10", "15", "20")),    // numeric values
+                    List.of("0", "5", "10", "15", "20")),
             new ColumnRecord("MedicationType",
                     List.of("Aspirin", "Metformin", "Warfarin", "Lisinopril")),
             new ColumnRecord("DischargeStatus",
@@ -396,7 +615,7 @@ public class OpenMedTerminologyReportTest {
     }
 
     // -----------------------------------------------------------------------
-    // Autowired real services
+    // Autowired services
     // -----------------------------------------------------------------------
 
     @org.springframework.beans.factory.annotation.Autowired
@@ -406,181 +625,153 @@ public class OpenMedTerminologyReportTest {
     private TerminologyLookupService terminologyLookupService;
 
     // -----------------------------------------------------------------------
-    // Report test
+    // Test
     // -----------------------------------------------------------------------
 
     @Test
-    @DisplayName("OpenMed infers valid search terms; Snowstorm resolves them to valid SNOMED CT")
+    @DisplayName("Full pipeline: OpenMed NER → Snowstorm SNOMED – terminology must be non-empty for known medical terms")
     void generates_openmed_terminology_report() throws Exception {
-        // Skip gracefully when OpenMed is unavailable so CI isn't broken.
         assumeTrue(openMedAvailable,
                 "Skipping: OpenMed service not reachable at " + OPENMED_HEALTH_URL);
 
         List<ColumnRecord> columns = testColumns();
 
-        // ── Step 1: OpenMed NER → validated search terms ─────────────────────
+        // ── Step 1: OpenMed NER ───────────────────────────────────────────────
         System.out.println("\n=== Step 1: OpenMed NER inference ===");
         long t0 = System.currentTimeMillis();
         List<OpenMedTerminologyService.InferredTerm> inferred =
                 openMedTerminologyService.inferBatch(columns);
         long inferMs = System.currentTimeMillis() - t0;
-
-        System.out.printf("  %d column(s) → %d inferred term(s) in %d ms%n",
+        System.out.printf("  %d columns → %d inferred terms in %d ms%n",
                 columns.size(), inferred.size(), inferMs);
 
         assertNotNull(inferred, "inferBatch must not return null");
-        // If the warm-up succeeded but the full batch returned empty, the model may have
-        // hit an edge-case. Skip gracefully rather than failing so CI stays green.
         assumeTrue(!inferred.isEmpty(),
-                "OpenMed returned no InferredTerms for the test columns – skipping (model may not be fully functional in this environment)");
+                "OpenMed returned no InferredTerms – model may not be functional in this environment");
 
         for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            System.out.printf("  col='%s'  searchTerm='%s'%n", t.colKey(), t.colSearchTerm());
-            // The search term must be a valid phrase (not a SNOMED code, not empty)
             assertFalse(t.colSearchTerm().isBlank(),
                     "colSearchTerm must not be blank for col='" + t.colKey() + "'");
             assertFalse(SNOMED_FORMAT.matcher(t.colSearchTerm()).matches(),
-                    "colSearchTerm must NOT already look like a SNOMED code: '" + t.colSearchTerm() + "'");
-
+                    "colSearchTerm must not look like a SNOMED code: '" + t.colSearchTerm() + "'");
+            System.out.printf("  col='%s' → '%s'%n", t.colKey(), t.colSearchTerm());
             if (t.valueSearchTerms() != null) {
-                t.valueSearchTerms().forEach((rawVal, term) ->
-                    System.out.printf("    val='%s' → '%s'%n", rawVal, term));
+                t.valueSearchTerms().forEach((v, s) ->
+                        System.out.printf("    val='%s' → '%s'%n", v, s));
             }
         }
 
-        // ── Step 2: build TerminologyLookupService requests ──────────────────
+        // ── Step 2: Build lookup requests ────────────────────────────────────
         System.out.println("\n=== Step 2: building Snowstorm lookup requests ===");
-        List<TerminologyLookupService.TerminologyRequest> requests = new ArrayList<>();
-        // colKey → composite lookupKey ("colKey|searchTerm")
         Map<String, String> colLookupKeys = new LinkedHashMap<>();
-        // "colKey|rawValue" → composite lookupKey ("colKey|valueTerm")
         Map<String, String> valLookupKeys = new LinkedHashMap<>();
+        List<TerminologyLookupService.TerminologyRequest> requests = new ArrayList<>();
         Set<String> seen = new LinkedHashSet<>();
 
         for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            String colLookupKey = t.colKey() + "|" + t.colSearchTerm();
-            colLookupKeys.put(t.colKey(), colLookupKey);
-            if (seen.add(colLookupKey)) {
-                requests.add(new TerminologyLookupService.TerminologyRequest(colLookupKey, null));
-            }
-
+            String colKey = t.colKey() + "|" + t.colSearchTerm();
+            colLookupKeys.put(t.colKey(), colKey);
+            if (seen.add(colKey))
+                requests.add(new TerminologyLookupService.TerminologyRequest(colKey, null));
             if (t.valueSearchTerms() != null) {
                 t.valueSearchTerms().forEach((rawVal, valTerm) -> {
-                    String vLookupKey = t.colKey() + "|" + valTerm;
-                    valLookupKeys.put(t.colKey() + "|" + rawVal, vLookupKey);
-                    if (seen.add(vLookupKey)) {
-                        requests.add(new TerminologyLookupService.TerminologyRequest(
-                                vLookupKey, t.colKey()));
-                    }
+                    String vKey = t.colKey() + "|" + valTerm;
+                    valLookupKeys.put(t.colKey() + "|" + rawVal, vKey);
+                    if (seen.add(vKey))
+                        requests.add(new TerminologyLookupService.TerminologyRequest(vKey, t.colKey()));
                 });
             }
         }
-        System.out.printf("  %d lookup request(s) built%n", requests.size());
+        System.out.printf("  %d lookup request(s)%n", requests.size());
 
         // ── Step 3: Snowstorm lookup ──────────────────────────────────────────
         System.out.println("\n=== Step 3: Snowstorm SNOMED lookup ===");
+        if (!snowstormAvailable)
+            System.out.println("  ⚠ Snowstorm not available – all SNOMED results will be empty");
         long t1 = System.currentTimeMillis();
         Map<String, String> snomedResults =
                 terminologyLookupService.batchLookupTerminology(requests);
         long lookupMs = System.currentTimeMillis() - t1;
-        System.out.printf("  %d result(s) returned in %d ms%n", snomedResults.size(), lookupMs);
+        System.out.printf("  %d result(s) in %d ms%n", snomedResults.size(), lookupMs);
 
-        if (!snowstormAvailable) {
-            System.out.println("  ⚠  Snowstorm not available – all SNOMED results will be empty");
-        }
-
-        // ── Step 4: apply SNOMED filter and collect final terminology ─────────
-        System.out.println("\n=== Step 4: applying SNOMED format filter ===");
+        // ── Step 4: Apply SNOMED filter ───────────────────────────────────────
+        System.out.println("\n=== Step 4: SNOMED format filter ===");
         Map<String, TermResult> finalResults = new LinkedHashMap<>();
-
         for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            String colLookupKey = colLookupKeys.getOrDefault(t.colKey(), "");
-            String rawSnomed    = snomedResults.getOrDefault(colLookupKey, "");
-            String terminology  = resolveToSnomed(rawSnomed);
-
-            Map<String, String> valueTerminology = new LinkedHashMap<>();
+            String rawSnomed  = snomedResults.getOrDefault(
+                    colLookupKeys.getOrDefault(t.colKey(), ""), "");
+            String terminology = resolveToSnomed(rawSnomed);
+            Map<String, String> valueTerm = new LinkedHashMap<>();
             if (t.valueSearchTerms() != null) {
                 t.valueSearchTerms().forEach((rawVal, valTerm) -> {
-                    String vLookupKey   = valLookupKeys.getOrDefault(t.colKey() + "|" + rawVal, "");
-                    String rawVSnomed   = snomedResults.getOrDefault(vLookupKey, "");
-                    String vTerminology = resolveToSnomed(rawVSnomed);
-                    valueTerminology.put(rawVal, vTerminology);
-
-                    System.out.printf("    val='%-25s searchTerm=%-30s SNOMED='%s'%n",
-                            rawVal + "'", "'" + valTerm + "'", vTerminology);
+                    String vKey = valLookupKeys.getOrDefault(t.colKey() + "|" + rawVal, "");
+                    String vSnomed = resolveToSnomed(snomedResults.getOrDefault(vKey, ""));
+                    valueTerm.put(rawVal, vSnomed);
+                    System.out.printf("    val='%-25s search='%-30s SNOMED='%s'%n",
+                            rawVal + "'", valTerm + "'", vSnomed);
                 });
             }
-
             finalResults.put(t.colKey(), new TermResult(t.colKey(), t.colSearchTerm(),
-                    terminology, valueTerminology));
-            System.out.printf("  col='%-22s searchTerm=%-30s SNOMED='%s'%n",
-                    t.colKey() + "'", "'" + t.colSearchTerm() + "'", terminology);
+                    terminology, valueTerm));
+            System.out.printf("  col='%-22s search='%-30s SNOMED='%s'%n",
+                    t.colKey() + "'", t.colSearchTerm() + "'", terminology);
         }
 
-        // ── Step 5: assert correctness ────────────────────────────────────────
-        System.out.println("\n=== Step 5: correctness assertions ===");
-        int snomedCount = 0;
-        int emptyCount  = 0;
+        // ── Step 5: Format violations ─────────────────────────────────────────
+        System.out.println("\n=== Step 5: SNOMED format assertions ===");
+        int snomedCount = 0, emptyCount = 0;
         List<String> violations = new ArrayList<>();
-
         for (TermResult r : finalResults.values()) {
-            // Column-level
-            String col = validateTerminologyField(r.colKey, r.colSearchTerm, r.terminology, violations);
-            if (col != null && !col.isEmpty()) snomedCount++; else emptyCount++;
-
-            // Value-level
+            String v = validateTerminologyField(r.colKey, r.colSearchTerm, r.terminology, violations);
+            if (!v.isEmpty()) snomedCount++; else emptyCount++;
             for (Map.Entry<String, String> e : r.valueTerminology.entrySet()) {
-                String val = validateTerminologyField(r.colKey + "/" + e.getKey(),
-                        "", e.getValue(), violations);
-                if (val != null && !val.isEmpty()) snomedCount++; else emptyCount++;
+                String vv = validateTerminologyField(r.colKey + "/" + e.getKey(), "", e.getValue(), violations);
+                if (!vv.isEmpty()) snomedCount++; else emptyCount++;
+            }
+        }
+        System.out.printf("  %d SNOMED, %d empty%n", snomedCount, emptyCount);
+        violations.forEach(vv -> System.out.println("  ✗ " + vv));
+        assertTrue(violations.isEmpty(), "Format violations:\n" + String.join("\n", violations));
+
+        // ── Step 6: Write report ──────────────────────────────────────────────
+        Path outDir = Paths.get("target", "openmed-report");
+        Files.createDirectories(outDir);
+        String stamp = LocalDateTime.now().format(TS_FMT);
+        Path jsonOut = outDir.resolve("openmed-report-" + stamp + ".json");
+        Path mdOut   = outDir.resolve("openmed-report-" + stamp + ".md");
+        writeJsonReport(jsonOut, finalResults);
+        writeMarkdownReport(mdOut, finalResults, inferMs, lookupMs);
+        assertTrue(Files.exists(jsonOut), "JSON report must exist");
+        assertTrue(Files.exists(mdOut),   "Markdown report must exist");
+        System.out.println("\n  Reports: " + jsonOut + "\n           " + mdOut);
+
+        // ── Step 7: Non-empty SNOMED for known medical value terms ────────────
+        System.out.println("\n=== Step 7: non-empty terminology assertions ===");
+        if (snowstormAvailable) {
+            // These value terms must resolve to SNOMED codes because:
+            //   a) OpenMed NER produces valid search phrases for them
+            //   b) Matching concepts were seeded into Snowstorm in @BeforeAll
+            String[] mustHaveSnomed = {
+                    "Hypertension", "Stroke", "Diabetes Mellitus", "Aspirin", "Warfarin"};
+            for (String valueName : mustHaveSnomed) {
+                String terminology = findValueTerminology(finalResults, valueName);
+                assertNotNull(terminology,
+                        "Value '" + valueName + "' was not found in the inferred terms");
+                assertFalse(terminology.isEmpty(),
+                        "Terminology for '" + valueName + "' must NOT be empty when Snowstorm is "
+                        + "running – concept was seeded and OpenMed should produce a valid search term.");
+                assertTrue(SNOMED_FORMAT.matcher(terminology).matches(),
+                        "Terminology for '" + valueName + "' must be valid SNOMED format, got: "
+                        + terminology);
+                System.out.printf("  ✓ %-25s → '%s'%n", valueName, terminology);
             }
         }
 
-        System.out.printf("  Total resolved: %d SNOMED code(s), %d empty%n",
-                snomedCount, emptyCount);
-        if (!violations.isEmpty()) {
-            violations.forEach(v -> System.out.println("  ✗ " + v));
-        }
-
-        // ── Step 6: write report ──────────────────────────────────────────────
-        Path outDir = Paths.get("target", "openmed-report");
-        Files.createDirectories(outDir);
-        String stamp     = LocalDateTime.now().format(TS_FMT);
-        Path   jsonOut   = outDir.resolve("openmed-report-" + stamp + ".json");
-        Path   mdOut     = outDir.resolve("openmed-report-" + stamp + ".md");
-
-        writeJsonReport(jsonOut, finalResults, inferred, snomedResults);
-        writeMarkdownReport(mdOut, finalResults, inferred, snomedResults,
-                inferMs, lookupMs, openMedAvailable, snowstormAvailable);
-
-        System.out.println("\n  Reports written:");
-        System.out.println("    JSON: " + jsonOut);
-        System.out.println("    MD:   " + mdOut);
-
-        // ── Step 7: final assertions ──────────────────────────────────────────
-        assertTrue(Files.exists(jsonOut), "JSON report must have been written");
-        assertTrue(Files.exists(mdOut),   "Markdown report must have been written");
-
-        assertTrue(violations.isEmpty(),
-                "Format violations found:\n" + String.join("\n", violations));
-
-        // At least one column must have resolved a non-empty search term.
-        assertFalse(finalResults.isEmpty(),
-                "No InferredTerm records were returned by OpenMed");
-
-        if (snowstormAvailable) {
-            // If Snowstorm is reachable, at least some columns should get a SNOMED code.
-            assertTrue(snomedCount > 0,
-                    "Snowstorm is reachable but 0 SNOMED codes were resolved; check rdfbuilder logs");
-        }
-
-        // ── Step 8: model-output quality assertions ───────────────────────────
-        // These check that the NER model is actually producing sensible output,
-        // independent of Snowstorm availability.
+        // ── Step 8: Model-output quality ─────────────────────────────────────
         System.out.println("\n=== Step 8: model-output quality assertions ===");
         assertModelOutputQuality(inferred);
 
-        System.out.printf("%n  ✓ Pipeline passed: %d SNOMED code(s), %d empty, 0 violations%n",
+        System.out.printf("%n  ✓ Pipeline passed: %d SNOMED, %d empty, 0 format violations%n",
                 snomedCount, emptyCount);
     }
 
@@ -588,221 +779,164 @@ public class OpenMedTerminologyReportTest {
     // Helpers
     // -----------------------------------------------------------------------
 
-    /**
-     * Asserts that the NER model's output is sensible for the known test columns.
-     * These checks are independent of Snowstorm: they verify the model itself is
-     * producing valid, useful search phrases.
-     *
-     * <h3>Expectations</h3>
-     * <ul>
-     *   <li><b>Known medical value terms</b> – "Hypertension", "Stroke",
-     *       "Diabetes Mellitus" → the model must produce a non-empty, valid phrase
-     *       that passes {@link OpenMedTerminologyService#isValidTerm isValidTerm}.</li>
-     *   <li><b>Drug names</b> – "Aspirin", "Warfarin" → same as above.</li>
-     *   <li><b>Numeric values</b> – "40", "120", "0", "5" → must NOT produce a
-     *       valid search term (they are filtered by {@code isValidTerm}).</li>
-     *   <li><b>No SNOMED codes in output</b> – search terms must never match
-     *       {@code ^\d{6,}(\|.+)?$}; that would mean OpenMed returned a
-     *       pre-resolved code which is the double-lookup bug we fixed.</li>
-     * </ul>
-     */
-    private void assertModelOutputQuality(List<OpenMedTerminologyService.InferredTerm> inferred) {
-        // Build lookup maps for convenient assertions
-        Map<String, OpenMedTerminologyService.InferredTerm> byCol = new LinkedHashMap<>();
-        for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            byCol.put(t.colKey(), t);
+    private String findValueTerminology(Map<String, TermResult> results, String valueName) {
+        for (TermResult r : results.values()) {
+            if (r.valueTerminology.containsKey(valueName))
+                return r.valueTerminology.get(valueName);
+            for (Map.Entry<String, String> e : r.valueTerminology.entrySet())
+                if (e.getKey().equalsIgnoreCase(valueName)) return e.getValue();
         }
-
-        // ── A. Column search terms must not be blank or SNOMED codes ──────────
-        for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            String st = t.colSearchTerm();
-            assertFalse(st.isBlank(),
-                    "col='" + t.colKey() + "': colSearchTerm must not be blank");
-            assertFalse(SNOMED_FORMAT.matcher(st).matches(),
-                    "col='" + t.colKey() + "': colSearchTerm must not be a SNOMED code, got: '" + st + "'");
-            System.out.printf("  [COL] %-25s → '%s' ✓%n", t.colKey(), st);
-        }
-
-        // ── B. Known medical value terms produce valid search phrases ─────────
-        Map<String, String> expectedPhrases = new LinkedHashMap<>();
-        // value name → minimum required word length (to avoid spuriously short matches)
-        expectedPhrases.put("Hypertension",    "hypertension");
-        expectedPhrases.put("Stroke",          "stroke");
-        expectedPhrases.put("Diabetes Mellitus", "diabetes");  // at least starts with this
-        expectedPhrases.put("Aspirin",         "aspirin");
-        expectedPhrases.put("Warfarin",        "warfarin");
-        expectedPhrases.put("Male",            null);   // accepted if non-empty valid phrase
-        expectedPhrases.put("Female",          "female");
-
-        OpenMedTerminologyService.InferredTerm diagTerm = byCol.get("Diagnosis");
-        OpenMedTerminologyService.InferredTerm medTerm  = byCol.get("MedicationType");
-        OpenMedTerminologyService.InferredTerm genderTerm = byCol.get("PatientGender");
-
-        for (Map.Entry<String, String> exp : expectedPhrases.entrySet()) {
-            String valueName    = exp.getKey();
-            String mustContain  = exp.getValue();
-
-            // Find which column has this value
-            OpenMedTerminologyService.InferredTerm owner = null;
-            if (diagTerm   != null && diagTerm.valueSearchTerms().containsKey(valueName))   owner = diagTerm;
-            if (medTerm    != null && medTerm.valueSearchTerms().containsKey(valueName))    owner = medTerm;
-            if (genderTerm != null && genderTerm.valueSearchTerms().containsKey(valueName)) owner = genderTerm;
-
-            if (owner == null) {
-                System.out.printf("  [VAL] %-20s → (no entry in inferred terms – possibly filtered by isValidTerm)%n", valueName);
-                continue;
-            }
-
-            String phrase = owner.valueSearchTerms().get(valueName);
-            assertNotNull(phrase, "phrase must not be null for value '" + valueName + "'");
-            assertFalse(phrase.isBlank(),
-                    "phrase must not be blank for value '" + valueName + "'");
-            assertFalse(SNOMED_FORMAT.matcher(phrase).matches(),
-                    "value='" + valueName + "': search term must NOT be a SNOMED code, got: '" + phrase + "'");
-
-            if (mustContain != null) {
-                assertTrue(phrase.toLowerCase().contains(mustContain.toLowerCase()),
-                        "value='" + valueName + "': expected search term to contain '" + mustContain
-                        + "' but got '" + phrase + "'");
-            }
-            System.out.printf("  [VAL] %-20s → '%s' ✓%n", valueName, phrase);
-        }
-
-        // ── C. Purely numeric values must NOT appear as valid search terms ────
-        // isValidTerm rejects numeric-only strings; the valueSearchTerms map
-        // should therefore not contain them OR they map to empty/invalid terms.
-        List<String> numericValues = List.of("40", "120", "160", "0", "5", "10", "15", "20", "25");
-        for (OpenMedTerminologyService.InferredTerm t : inferred) {
-            if (t.valueSearchTerms() == null) continue;
-            for (String numVal : numericValues) {
-                String term = t.valueSearchTerms().get(numVal);
-                if (term != null) {
-                    // If it's in the map, it must NOT be a valid search term (numeric or blank)
-                    assertFalse(openMedTerminologyService.isValidTerm(term),
-                            "col='" + t.colKey() + "' val='" + numVal
-                            + "': numeric value must not produce a valid search term, got: '" + term + "'");
-                    System.out.printf("  [NUM] col=%-20s val=%-5s → '%s' (correctly invalid) ✓%n",
-                            t.colKey(), numVal, term);
-                }
-            }
-        }
-
-        System.out.println("  ✓ All model-output quality assertions passed");
+        return null;
     }
 
-    /**
-     * Accepts a raw Snowstorm result, returning it if it matches SNOMED format
-     * ({@code ^\d{6,}(\|.+)?$}) or {@code ""} otherwise.
-     * Mirrors the {@code isSnowstormCode} filter in {@code MappingEnrichmentHelper}.
-     */
     private static String resolveToSnomed(String raw) {
         if (raw == null || raw.isBlank()) return "";
         return SNOMED_FORMAT.matcher(raw.trim()).matches() ? raw.trim() : "";
     }
 
-    /**
-     * Asserts that {@code terminology} is either a valid SNOMED code or empty.
-     * Adds a violation message to {@code violations} if not.
-     */
     private static String validateTerminologyField(
             String location, String searchTerm, String terminology, List<String> violations) {
         if (terminology == null || terminology.isEmpty()) return "";
-
-        if (terminology.startsWith("CONCEPT_")) {
-            violations.add(String.format(
-                    "[%s] terminology='%s' is a synthetic fallback code – must be filtered to empty",
-                    location, terminology));
-        } else if (!SNOMED_FORMAT.matcher(terminology).matches()) {
-            violations.add(String.format(
-                    "[%s] searchTerm='%s' → terminology='%s' does not match SNOMED format ^\\d{6,}(\\|.+)?$",
-                    location, searchTerm, terminology));
-        }
+        if (terminology.startsWith("CONCEPT_"))
+            violations.add("[" + location + "] synthetic fallback must be filtered: " + terminology);
+        else if (!SNOMED_FORMAT.matcher(terminology).matches())
+            violations.add("[" + location + "] '" + searchTerm + "' → '" + terminology
+                    + "' does not match SNOMED format");
         return terminology;
     }
 
-    private static void writeJsonReport(
-            Path out,
-            Map<String, TermResult> finalResults,
-            List<OpenMedTerminologyService.InferredTerm> inferred,
-            Map<String, String> rawSnomed) throws IOException {
+    private void assertModelOutputQuality(List<OpenMedTerminologyService.InferredTerm> inferred) {
+        for (OpenMedTerminologyService.InferredTerm t : inferred) {
+            assertFalse(t.colSearchTerm().isBlank(),
+                    "col='" + t.colKey() + "': search term must not be blank");
+            assertFalse(SNOMED_FORMAT.matcher(t.colSearchTerm()).matches(),
+                    "col='" + t.colKey() + "': search term must not look like SNOMED");
+            System.out.printf("  [COL] %-25s → '%s' ✓%n", t.colKey(), t.colSearchTerm());
+        }
 
+        record Expected(String valueName, String mustContain) {}
+        List<Expected> checks = List.of(
+                new Expected("Hypertension",    "hypertension"),
+                new Expected("Stroke",          "stroke"),
+                new Expected("Diabetes Mellitus","diabetes"),
+                new Expected("Aspirin",         "aspirin"),
+                new Expected("Warfarin",        "warfarin"),
+                new Expected("Female",          "female")
+        );
+        for (Expected exp : checks) {
+            String phrase = null;
+            outer:
+            for (OpenMedTerminologyService.InferredTerm t : inferred) {
+                if (t.valueSearchTerms() == null) continue;
+                for (Map.Entry<String, String> e : t.valueSearchTerms().entrySet()) {
+                    if (e.getKey().equalsIgnoreCase(exp.valueName())) { phrase = e.getValue(); break outer; }
+                }
+            }
+            if (phrase == null) {
+                System.out.printf("  [VAL] %-20s → (filtered by isValidTerm)%n", exp.valueName());
+                continue;
+            }
+            assertFalse(phrase.isBlank(), "phrase must not be blank for '" + exp.valueName() + "'");
+            assertFalse(SNOMED_FORMAT.matcher(phrase).matches(),
+                    "'" + exp.valueName() + "': search term must not look like SNOMED: " + phrase);
+            assertTrue(phrase.toLowerCase().contains(exp.mustContain()),
+                    "'" + exp.valueName() + "': expected '" + exp.mustContain()
+                            + "' in search term, got '" + phrase + "'");
+            System.out.printf("  [VAL] %-20s → '%s' ✓%n", exp.valueName(), phrase);
+        }
+
+        List<String> numericVals = List.of("40", "120", "0", "5", "10", "15");
+        for (OpenMedTerminologyService.InferredTerm t : inferred) {
+            if (t.valueSearchTerms() == null) continue;
+            for (String nv : numericVals) {
+                String term = t.valueSearchTerms().get(nv);
+                if (term != null)
+                    assertFalse(openMedTerminologyService.isValidTerm(term),
+                            "col='" + t.colKey() + "' val='" + nv
+                                    + "': numeric must not produce valid search term, got: '" + term + "'");
+            }
+        }
+        System.out.println("  ✓ All model-output quality assertions passed");
+    }
+
+    // -----------------------------------------------------------------------
+    // Report writers
+    // -----------------------------------------------------------------------
+
+    private static void writeJsonReport(Path out, Map<String, TermResult> results) throws IOException {
         List<Map<String, Object>> rows = new ArrayList<>();
-        for (TermResult r : finalResults.values()) {
+        for (TermResult r : results.values()) {
             Map<String, Object> row = new LinkedHashMap<>();
-            row.put("column",       r.colKey);
-            row.put("searchTerm",   r.colSearchTerm);
-            row.put("terminology",  r.terminology);
-            row.put("isSnomed",     !r.terminology.isEmpty());
+            row.put("column",      r.colKey);
+            row.put("searchTerm",  r.colSearchTerm);
+            row.put("terminology", r.terminology);
+            row.put("isSnomed",    !r.terminology.isEmpty());
             Map<String, Object> vals = new LinkedHashMap<>();
-            r.valueTerminology.forEach((v, t) -> {
-                Map<String, String> vRow = new LinkedHashMap<>();
-                vRow.put("terminology", t);
-                vRow.put("isSnomed", String.valueOf(!t.isEmpty()));
-                vals.put(v, vRow);
-            });
+            r.valueTerminology.forEach((v, t) -> vals.put(v, Map.of(
+                    "terminology", t, "isSnomed", !t.isEmpty())));
             row.put("values", vals);
             rows.add(row);
         }
-        byte[] bytes = MAPPER.writerWithDefaultPrettyPrinter().writeValueAsBytes(rows);
         try (OutputStream os = Files.newOutputStream(out,
                 StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
-            os.write(bytes);
+            os.write(MAPPER.writerWithDefaultPrettyPrinter().writeValueAsBytes(rows));
         }
     }
 
-    private static void writeMarkdownReport(
-            Path out,
-            Map<String, TermResult> finalResults,
-            List<OpenMedTerminologyService.InferredTerm> inferred,
-            Map<String, String> rawSnomed,
-            long inferMs, long lookupMs,
-            boolean openMedUp, boolean snowstormUp) throws IOException {
-
-        int snomedCount = (int) finalResults.values().stream()
-                .filter(r -> !r.terminology.isEmpty()).count();
-        int valSnomedCount = (int) finalResults.values().stream()
+    private static void writeMarkdownReport(Path out, Map<String, TermResult> results,
+                                             long inferMs, long lookupMs) throws IOException {
+        int snomedCount = (int) results.values().stream().filter(r -> !r.terminology.isEmpty()).count();
+        int valSnomedCount = (int) results.values().stream()
                 .flatMap(r -> r.valueTerminology.values().stream())
                 .filter(t -> !t.isEmpty()).count();
-
-        StringBuilder sb = new StringBuilder();
-        sb.append("# OpenMed Terminology Report\n\n");
-        sb.append("| | |\n|---|---|\n");
-        sb.append("| Generated | ").append(LocalDateTime.now()).append(" |\n");
-        sb.append("| OpenMed service | ").append(openMedUp ? "✓ UP" : "✗ DOWN").append(" |\n");
-        sb.append("| Snowstorm proxy | ").append(snowstormUp ? "✓ UP" : "✗ DOWN").append(" |\n");
-        sb.append("| Inference time  | ").append(inferMs).append(" ms |\n");
-        sb.append("| Snowstorm lookup time | ").append(lookupMs).append(" ms |\n");
-        sb.append("| Columns resolved | ").append(snomedCount)
-                .append(" SNOMED / ").append(finalResults.size()).append(" total |\n");
-        sb.append("| Values  resolved | ").append(valSnomedCount).append(" SNOMED |\n\n");
-
-        sb.append("## Column results\n\n");
-        sb.append("| Column | OpenMed search term | SNOMED terminology |\n");
-        sb.append("|--------|--------------------|-----------------|\n");
-        for (TermResult r : finalResults.values()) {
-            sb.append("| `").append(r.colKey).append("` | `").append(r.colSearchTerm)
-              .append("` | `").append(r.terminology.isEmpty() ? "—" : r.terminology)
-              .append("` |\n");
-        }
-
-        sb.append("\n## Value results\n\n");
-        for (TermResult r : finalResults.values()) {
-            if (r.valueTerminology.isEmpty()) continue;
-            sb.append("### `").append(r.colKey).append("`\n\n");
-            sb.append("| Value | SNOMED terminology |\n|-------|------------------|\n");
+        StringBuilder sb = new StringBuilder()
+                .append("# OpenMed Terminology Report\n\n| | |\n|---|---|\n")
+                .append("| Generated | ").append(LocalDateTime.now()).append(" |\n")
+                .append("| OpenMed | ").append(openMedAvailable ? "✓ UP" : "✗ DOWN").append(" |\n")
+                .append("| Snowstorm | ").append(snowstormAvailable
+                        ? "✓ UP (" + seededTerms.size() + " concepts seeded)" : "✗ DOWN")
+                .append(" |\n")
+                .append("| Inference | ").append(inferMs).append(" ms |\n")
+                .append("| Lookup | ").append(lookupMs).append(" ms |\n")
+                .append("| Column SNOMED | ").append(snomedCount).append(" / ")
+                .append(results.size()).append(" |\n")
+                .append("| Value SNOMED | ").append(valSnomedCount).append(" |\n\n")
+                .append("## Columns\n\n| Column | Search term | SNOMED |\n|--------|------------|--------|\n");
+        results.forEach((k, r) -> sb.append("| `").append(r.colKey).append("` | `")
+                .append(r.colSearchTerm).append("` | `")
+                .append(r.terminology.isEmpty() ? "—" : r.terminology).append("` |\n"));
+        sb.append("\n## Values\n\n");
+        results.forEach((k, r) -> {
+            if (r.valueTerminology.isEmpty()) return;
+            sb.append("### `").append(r.colKey).append("`\n\n| Value | SNOMED |\n|-------|--------|\n");
             r.valueTerminology.forEach((v, t) ->
-                sb.append("| `").append(v).append("` | `")
-                  .append(t.isEmpty() ? "—" : t).append("` |\n"));
+                    sb.append("| `").append(v).append("` | `")
+                      .append(t.isEmpty() ? "—" : t).append("` |\n"));
             sb.append("\n");
-        }
-
+        });
         try (OutputStream os = Files.newOutputStream(out,
                 StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING)) {
             os.write(sb.toString().getBytes(StandardCharsets.UTF_8));
         }
     }
 
-    /** HTTP GET probe with a short timeout; returns true on 2xx. */
+    // -----------------------------------------------------------------------
+    // Infrastructure utilities
+    // -----------------------------------------------------------------------
+
+    private static String httpGet(String url, int timeoutMs) throws Exception {
+        return HttpClient.newBuilder()
+                .version(HttpClient.Version.HTTP_1_1)
+                .connectTimeout(Duration.ofMillis(timeoutMs))
+                .build()
+                .send(HttpRequest.newBuilder()
+                        .uri(URI.create(url))
+                        .timeout(Duration.ofMillis(timeoutMs))
+                        .GET().build(),
+                        HttpResponse.BodyHandlers.ofString())
+                .body();
+    }
+
     private static boolean probeHttp(String urlStr, int timeoutMs) {
         try {
             HttpURLConnection conn = (HttpURLConnection) new URL(urlStr).openConnection();
@@ -812,62 +946,96 @@ public class OpenMedTerminologyReportTest {
             int code = conn.getResponseCode();
             conn.disconnect();
             return code >= 200 && code < 300;
-        } catch (Exception e) {
-            return false;
-        }
+        } catch (Exception e) { return false; }
     }
 
-    /**
-     * Posts a minimal single-column batch to {@code /infer_batch} to verify the NER
-     * model is fully loaded and the service is producing results.
-     * Retries for up to 60 s to handle the case where the health endpoint comes up
-     * slightly before the model finishes loading.
-     *
-     * @return {@code true} when a non-empty response is received
-     */
+    private static boolean waitForHttp(String url, int timeoutS, String name)
+            throws InterruptedException {
+        long deadline = System.currentTimeMillis() + timeoutS * 1_000L;
+        System.out.printf("  Waiting for %-15s at %s …%n", name, url);
+        while (System.currentTimeMillis() < deadline) {
+            if (probeHttp(url, 2_000)) {
+                System.out.printf("  %-15s ✓ ready%n", name + ":");
+                return true;
+            }
+            System.out.print(".");
+            Thread.sleep(2_000);
+        }
+        System.out.println();
+        System.out.printf("  %-15s ✗ not ready within %ds%n", name + ":", timeoutS);
+        return false;
+    }
+
+    private static boolean dockerAvailable() {
+        try {
+            Process p = new ProcessBuilder("docker", "version")
+                    .redirectErrorStream(true).start();
+            p.waitFor();
+            return p.exitValue() == 0;
+        } catch (Exception e) { return false; }
+    }
+
+    private static String dockerContainerStatus(String name) {
+        try {
+            Process p = new ProcessBuilder("docker", "inspect", "-f",
+                    "{{.State.Running}}", name)
+                    .redirectErrorStream(true).start();
+            String out = new String(p.getInputStream().readAllBytes()).trim();
+            p.waitFor();
+            if (p.exitValue() != 0) return "notfound";
+            return "true".equalsIgnoreCase(out) ? "running" : "exited";
+        } catch (Exception e) { return "notfound"; }
+    }
+
+    private static void runDocker(String... cmd) throws Exception {
+        ProcessBuilder pb = new ProcessBuilder(cmd).redirectErrorStream(true);
+        Process p = pb.start();
+        String out = new String(p.getInputStream().readAllBytes());
+        p.waitFor();
+        if (p.exitValue() != 0)
+            logger.warn("[OpenMedReport] Docker failed ({}): {}\n{}", p.exitValue(),
+                    String.join(" ", cmd), out.trim());
+    }
+
+    private static void runDockerQuiet(String... cmd) {
+        try { runDocker(cmd); } catch (Exception ignored) {}
+    }
+
     private static boolean warmUpOpenMed() {
         String body = "{\"columns\":[{\"col_key\":\"diagnosis\",\"values\":[\"stroke\"]}]}";
-        long deadline = System.currentTimeMillis() + 60_000L;
+        long deadline = System.currentTimeMillis() + OPENMED_WARMUP_TIMEOUT_S * 1_000L;
         int attempt = 0;
         while (System.currentTimeMillis() < deadline) {
             attempt++;
             try {
-                java.net.http.HttpClient client = java.net.http.HttpClient.newBuilder()
-                        .version(java.net.http.HttpClient.Version.HTTP_1_1)  // uvicorn speaks HTTP/1.1
-                        .connectTimeout(java.time.Duration.ofSeconds(5))
-                        .build();
-                java.net.http.HttpRequest req = java.net.http.HttpRequest.newBuilder()
-                        .uri(java.net.URI.create("http://localhost:8002/infer_batch"))
-                        .timeout(java.time.Duration.ofSeconds(30))
-                        .header("Content-Type", "application/json")
-                        .POST(java.net.http.HttpRequest.BodyPublishers.ofString(body))
-                        .build();
-                java.net.http.HttpResponse<String> resp =
-                        client.send(req, java.net.http.HttpResponse.BodyHandlers.ofString());
-                if (resp.statusCode() == 200) {
-                    // Any 200 with a non-trivial body means the model is ready.
-                    String rb = resp.body();
-                    if (rb != null && rb.contains("col_key")) {
-                        logger.info("[OpenMedReport] Warm-up succeeded on attempt {}", attempt);
-                        return true;
-                    }
-                    logger.warn("[OpenMedReport] Warm-up attempt {}: 200 but unexpected body: {}",
-                            attempt, rb == null ? "<null>" : rb.substring(0, Math.min(200, rb.length())));
-                } else {
-                    logger.warn("[OpenMedReport] Warm-up attempt {}: status {}", attempt, resp.statusCode());
+                HttpResponse<String> resp = HttpClient.newBuilder()
+                        .version(HttpClient.Version.HTTP_1_1)
+                        .connectTimeout(Duration.ofSeconds(5))
+                        .build()
+                        .send(HttpRequest.newBuilder()
+                                        .uri(URI.create("http://localhost:8002/infer_batch"))
+                                        .timeout(Duration.ofSeconds(30))
+                                        .header("Content-Type", "application/json")
+                                        .POST(HttpRequest.BodyPublishers.ofString(body))
+                                        .build(),
+                                HttpResponse.BodyHandlers.ofString());
+                if (resp.statusCode() == 200 && resp.body() != null
+                        && resp.body().contains("col_key")) {
+                    logger.info("[OpenMedReport] Warm-up succeeded on attempt {}", attempt);
+                    return true;
                 }
-            } catch (java.net.ConnectException | java.net.http.HttpConnectTimeoutException e) {
-                logger.debug("[OpenMedReport] Warm-up attempt {}: not yet reachable", attempt);
             } catch (Exception e) {
-                logger.warn("[OpenMedReport] Warm-up attempt {}: {}", attempt, e.toString());
+                logger.debug("[OpenMedReport] Warm-up attempt {}: {}", attempt, e.getMessage());
             }
             System.out.print(".");
-            try { Thread.sleep(3_000); } catch (InterruptedException ie) { Thread.currentThread().interrupt(); break; }
+            try { Thread.sleep(3_000); } catch (InterruptedException ie) {
+                Thread.currentThread().interrupt(); break;
+            }
         }
         System.out.println();
         return false;
     }
-    /** Simple result holder used while building the report. */
+
     private record TermResult(
             String colKey,
             String colSearchTerm,
